# Blunderbuss

./: .gitignore  Cargo.toml  README.md  arasan2023.epd  perft.sh
benches/: bench_move.rs
src/: benchmark.rs  bitboard.rs  engine.rs  eval.rs  fen.rs  interface.rs  lib.rs  magic.rs  main.rs  make_move.rs  movegen.rs  perft.rs  position.rs  search.rs  zobrist.rs
