[package]
name = "blunderbuss"
version = "0.1.0"
edition = "2021"
authors = ["Felix Berman"]

[lib]
name = "blunderbuss"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.5.0"
crossbeam-channel = "0.5.12"
enum-iterator = "2.1.0"
itertools = "0.12.1"
lazy_static = "1.4.0"
num = "0.4.2"
num-derive = "0.4.2"
num-traits = "0.2.19"
rand = "0.8.5"
seq-macro = "0.3.5"
test-case = "3.3.1"

[dev-dependencies]
divan = "0.1.14"

[[bench]]
name = "bench_move"
harness = false
